--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,7 +14,21 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  node-version: 16
+                  node-version: 20
+
+    # publish-npm:
+    #     needs: build
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - uses: actions/checkout@v3
+    #         - uses: actions/setup-node@v3
+    #           with:
+    #               node-version: 20
+    #               registry-url: https://registry.npmjs.org/
+    #         - run: npm publish
+    #           env:
+    #               NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
+
     publish-gpr:
         needs: build
         runs-on: ubuntu-latest
@@ -25,7 +39,7 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  node-version: 16
+                  node-version: 20
                   registry-url: https://npm.pkg.github.com/
             - run: npm publish
               env:
