--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -29,18 +29,18 @@ jobs:
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
 
-    # publish-gpr:
-    #     needs: build
-    #     runs-on: ubuntu-latest
-    #     permissions:
-    #         contents: read
-    #         packages: write
-    #     steps:
-    #         - uses: actions/checkout@v3
-    #         - uses: actions/setup-node@v3
-    #           with:
-    #               node-version: 20
-    #               registry-url: https://npm.pkg.github.com/
-    #         - run: npm publish
-    #           env:
-    #               NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
+    publish-gpr:
+        needs: build
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: 20
+                  registry-url: https://npm.pkg.github.com/
+            - run: npm publish
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
