--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -43,4 +43,4 @@ jobs:
                   registry-url: https://npm.pkg.github.com/
             - run: npm publish
               env:
-                  NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
+                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
