--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "expert-octo-computing-machine",
     "version": "0.0.4",
     "description": "",
-    "main": "index.js",
+    "main": "out/index.js",
     "scripts": {
         "dev": "nodemon --exec tsx src/index.ts --ext .ts --watch src",
         "test": "tsc --noEmit",
