--- a/.github/workflows/test-code.yaml
+++ b/.github/workflows/test-code.yaml
@@ -13,14 +13,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
+            - uses: pnpm/action-setup@v2
               with:
-                  node-version: 20
-                  registry-url: https://registry.npmjs.org/
-
-            # Install PNPM
-            - name: "Install PNPM"
-              run: npm install -g pnpm
+                  version: 8
 
             # Install Dependencies
             - name: Install dependencies
