--- a/.github/workflows/test-code.yaml
+++ b/.github/workflows/test-code.yaml
@@ -1,4 +1,4 @@
-name: TypeScript Code Check
+name: Code Check
 
 on:
     push:
@@ -12,7 +12,7 @@ jobs:
     test:
         runs-on: ubuntu-latest
         steps:
-            # - uses: actions/checkout@v3
+            # Setup
             - uses: pnpm/action-setup@v2
               with:
                   version: 8
