--- a/.github/workflows/test-code.yaml
+++ b/.github/workflows/test-code.yaml
@@ -19,7 +19,7 @@ jobs:
 
             # Install Dependencies
             - name: Install dependencies
-              run: pnpm install
+              run: pnpm install typescript
 
             # Run Test
             - name: Run test
