--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -22,7 +22,7 @@ jobs:
               run: pnpm install
 
             # Run Test
-            - name: Run test
+            - name: Build
               run: pnpm run build
 
     # Publish to NPM
