--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -53,7 +53,7 @@ jobs:
 
             # Publish
             - name: Publish to NPM
-              run: pnpm publish --access public --tag dev --no-git-checks
+              run: npm publish --access public --tag dev --no-git-checks
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
 
