--- a/.github/workflows/test-code.yaml
+++ b/.github/workflows/test-code.yaml
@@ -12,16 +12,8 @@ jobs:
     test:
         runs-on: ubuntu-latest
         steps:
-            # Setup Action
+            # Setup
             - uses: actions/checkout@v3
-
-            # Setup Node
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 20
-                  registry-url: https://npm.github.com/
-
-            # Setup PNPM
             - uses: pnpm/action-setup@v2
               with:
                   version: 8
