--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -124,23 +124,23 @@ jobs:
             - run: pnpm publish
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
-    publish-github:
-        needs: build
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 16
-                  registry-url: https://npm.pkg.github.com/
+    # publish-github:
+    #     needs: build
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - uses: actions/checkout@v4
+    #         - uses: actions/setup-node@v3
+    #           with:
+    #               node-version: 16
+    #               registry-url: https://npm.pkg.github.com/
 
-            - uses: pnpm/action-setup@v2
-              with:
-                  version: 8
+    #         - uses: pnpm/action-setup@v2
+    #           with:
+    #               version: 8
 
-            - run: pnpm publish
-              env:
-                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    #         - run: pnpm publish
+    #           env:
+    #               NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 ################################################################################
 ################################################################################
 ################################################################################
