--- a/.github/workflows/release-package.yaml
+++ b/.github/workflows/release-package.yaml
@@ -40,4 +40,4 @@ jobs:
 
             - run: pnpm publish
               env:
-                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
