--- a/.github/workflows/release-package.yaml
+++ b/.github/workflows/release-package.yaml
@@ -8,6 +8,40 @@ on:
         branches:
             - main
 
+# jobs:
+#     build:
+#         runs-on: ubuntu-latest
+#         steps:
+#             # Setup
+#             - uses: actions/checkout@v3
+#             - uses: pnpm/action-setup@v2
+#               with:
+#                   version: 8
+#             # Install Dependencies
+#             - name: Install dependencies
+#               run: pnpm install
+#             # Run Test
+#             - name: Build
+#               run: pnpm run build
+
+#     publish-github:
+#         needs: build
+#         runs-on: ubuntu-latest
+#         steps:
+#             - uses: actions/checkout@v4
+#             - uses: actions/setup-node@v3
+#               with:
+#                   node-version: 16
+#                   registry-url: https://npm.pkg.github.com/
+
+#             - uses: pnpm/action-setup@v2
+#               with:
+#                   version: 8
+
+#             - run: pnpm publish
+#               env:
+#                   NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -24,20 +58,21 @@ jobs:
             - name: Build
               run: pnpm run build
 
-    publish-github:
+    publish-gpr:
         needs: build
         runs-on: ubuntu-latest
+        permissions:
+            packages: write
+            contents: read
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v3
               with:
                   node-version: 16
                   registry-url: https://npm.pkg.github.com/
-
             - uses: pnpm/action-setup@v2
               with:
                   version: 8
-
             - run: pnpm publish
               env:
-                  NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
+                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
