--- a/.github/workflows/release-package.yaml
+++ b/.github/workflows/release-package.yaml
@@ -73,6 +73,6 @@ jobs:
             - uses: pnpm/action-setup@v2
               with:
                   version: 8
-            - run: pnpm publish
+            - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
