--- a/.github/workflows/release-package.yaml
+++ b/.github/workflows/release-package.yaml
@@ -1,12 +1,8 @@
 name: Node.js Package
 
 on:
-    push:
-        branches:
-            - main
-    pull_request:
-        branches:
-            - main
+    release:
+        types: created
 
 jobs:
     build:
