--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Publish package on release
 
 on:
     release:
@@ -16,13 +16,16 @@ jobs:
             - uses: pnpm/action-setup@v2
               with:
                   version: 8
+
             # Install Dependencies
             - name: Install dependencies
               run: pnpm install
+
             # Run Test
             - name: Build
               run: pnpm run build
-    publish-node-package-manager:
+
+    publish-to-node-package-manager:
         needs: build
         runs-on: ubuntu-latest
         steps:
@@ -36,6 +39,7 @@ jobs:
               with:
                   version: 8
 
-            - run: pnpm publish --access public --tag dev --no-git-checks
+            - name: Publish
+              run: pnpm publish --access latest --tag dev --no-git-checks
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
