--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,7 +43,32 @@ jobs:
               with:
                   version: 8
 
+            - name: Update Version
+              run: |
+                  cd packages/commandkit
+                  node -e "const pkg = require('./package.json'); \
+                  const newVersion = pkg.version + '-dev.' + new Date().toISOString().replace(/[:\-T]/g, '').substr(0,14); \
+                  pkg.version = newVersion; \
+                  require('fs').writeFileSync('./package.json', JSON.stringify(pkg, null, 2));"
+              env:
+                  DEBIAN_FRONTEND: noninteractive
+
             - name: Publish
               run: pnpm publish --access public --tag dev --no-git-checks
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
+
+            - name: Deprecate Previous Dev Version
+              run: |
+                  PACKAGE_NAME=$(node -e "console.log(require('./packages/commandkit/package.json').name);")
+                  ALL_VERSIONS=$(npm info $PACKAGE_NAME versions -json)
+                  VERSION_TO_DEPRECATE=$(echo $ALL_VERSIONS | node -e "
+                      const versions = JSON.parse(require('fs').readFileSync('/dev/stdin', 'utf-8'));
+                      const devVersions = versions.filter(v => v.includes('-dev.'));
+                      const versionToDeprecate = devVersions[devVersions.length - 2];
+                      console.log(versionToDeprecate);
+                  ")
+                  echo Deprecating version $VERSION_TO_DEPRECATE
+                  npm deprecate $PACKAGE_NAME@$VERSION_TO_DEPRECATE "Deprecated dev version."
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NODETOKEN}}
