--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,7 +29,7 @@ jobs:
             - name: Build
               run: pnpm run build
 
-    publish-to-node-package-manager:
+    publish:
         needs: build
         runs-on: ubuntu-latest
         steps:
@@ -45,7 +45,6 @@ jobs:
 
             - name: Update Version
               run: |
-                  cd packages/commandkit
                   node -e "const pkg = require('./package.json'); \
                   const newVersion = pkg.version + '-dev.' + new Date().toISOString().replace(/[:\-T]/g, '').substr(0,14); \
                   pkg.version = newVersion; \
